--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-      <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
+      <h1 class="project-name">{{site.title}}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       
       <a href="http://hcr2.info" class="btn">hcr2.<strong>info</strong></a>
@@ -36,8 +36,9 @@
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}-->
+   <center>{{site.lineone}}<br>{{site.linetwo}}</center>
     </header>
-<center>{{site.lineone}}<br>{{site.linetwo}}
+ 
     <main id="content" class="main-content" role="main">
       {{ content }}
 
