--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
       <h1 class="project-name">{{site.title}}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       
-      <a href="http://hcr2.info" class="btn">hcr2.<strong>info</strong></a>
+      <a href="https://ref.hcr2info.com" class="btn">hcr2.<strong>info</strong></a>
   <!--    {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
