--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
       {% endif %}-->
    <center>{{site.lineone}}<br>{{site.linetwo}}</center>
     </header>
- 
+  <center>{{site.lineone}}<br>{{site.linetwo}}</center>
     <main id="content" class="main-content" role="main">
       {{ content }}
 
