--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,11 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{site.title}}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      
+ <ul class="btn">
+          <li><a href="#best-distance-parts-by-vehicle">Adventure <strong>Parts</strong></a></li>
+          <li><a href="#tracks-by-map-type-and-distance">Cup <strong>Tracks</strong></a></li>
+          <li><a href="#daily-checklist">Daily <strong>Checklist</strong></a></li>
+      </ul>      
 <!--      <a href="https://ref.hcr2info.com" class="btn">hcr2.<strong>info</strong></a>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
@@ -35,8 +39,8 @@
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
-      {% endif %}-->
-   <center>{{site.lineone}}<br>{{site.linetwo}}</center>
+      {% endif %}
+   <center>{{site.lineone}}<br>{{site.linetwo}}</center> -->
     </header>
   <center>{{site.lineone}}<br>{{site.linetwo}}</center>
     <main id="content" class="main-content" role="main">
