--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,11 +27,11 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{site.title}}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
- <ul class="btn">
-          <li><a href="#best-distance-parts-by-vehicle">Adventure <strong>Parts</strong></a></li>
-          <li><a href="#tracks-by-map-type-and-distance">Cup <strong>Tracks</strong></a></li>
-          <li><a href="#daily-checklist">Daily <strong>Checklist</strong></a></li>
-      </ul>      
+  
+          <a href="#best-distance-parts-by-vehicle" class="btn">Adventure <strong>Parts</strong></a> 
+          <a href="#tracks-by-map-type-and-distance" class="btn">Cup <strong>Tracks</strong></a> 
+          <a href="#daily-checklist" class="btn">Daily <strong>Checklist</strong></a> 
+          
 <!--      <a href="https://ref.hcr2info.com" class="btn">hcr2.<strong>info</strong></a>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
