--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,10 +28,9 @@
       <h1 class="project-name">{{site.title}}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
   
-          <a href="#best-distance-parts-by-vehicle" class="btn">Adventure <strong>Parts</strong></a> 
-          <a href="#tracks-by-map-type-and-distance" class="btn">Cup <strong>Tracks</strong></a> 
-          <a href="#daily-checklist" class="btn">Daily <strong>Checklist</strong></a> 
-          
+          {{buttonone}} 
+          {{buttontwo}} 
+          {{buttonthree}} 
 <!--      <a href="https://ref.hcr2info.com" class="btn">hcr2.<strong>info</strong></a>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
