--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,10 +27,13 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{site.title}}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-  
-          {{buttonone}} 
+      
+<a href="#best-distance-parts-by-vehicle" class="btn"><strong>Adventure Parts</strong></a> 
+<a href="#tracks-by-map-type-and-distance" class="btn"><strong>Cup Tracks</strong></a> <hr>
+<a href="#daily-checklist" class="btn"><strong>Daily Checklist</strong></a>
+         <!-- {{buttonone}} 
           {{buttontwo}} 
-          {{buttonthree}} 
+          {{buttonthree}} -->
 <!--      <a href="https://ref.hcr2info.com" class="btn">hcr2.<strong>info</strong></a>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
