--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       
 <a href="#best-distance-parts-by-vehicle" class="btn"><strong>Adventure Parts</strong></a> 
-<a href="#tracks-by-map-type-and-distance" class="btn"><strong>Cup Tracks</strong></a> <hr>
+<a href="#tracks-by-map-type-and-distance" class="btn"><strong>Cup Tracks</strong></a>
 <a href="#daily-checklist" class="btn"><strong>Daily Checklist</strong></a>
          <!-- {{buttonone}} 
           {{buttontwo}} 
@@ -45,7 +45,7 @@
    <center>{{site.lineone}}<br>{{site.linetwo}}</center> -->
     </header>
   <center>{{site.lineone}}<br>{{site.linetwo}}</center>
-    <hr>
+    
     <main id="content" class="main-content" role="main">
       {{ content }}
 
