--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,9 @@
       <h1 class="project-name">{{site.title}}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       
-<a href="#best-distance-parts-by-vehicle" class="btn"><strong>Adventure Parts</strong></a> 
-<a href="#tracks-by-map-type-and-distance" class="btn"><strong>Cup Tracks</strong></a>
-<a href="#daily-checklist" class="btn"><strong>Daily Checklist</strong></a>
+<a href="#best-distance-parts-by-vehicle" class="btn">Adventure <strong>Parts</strong></a> 
+<a href="#tracks-by-map-type-and-distance" class="btn">Cup <strong>Tracks</strong></a>
+<a href="#daily-checklist" class="btn">Daily <strong>Checklist</strong></a>
          <!-- {{buttonone}} 
           {{buttontwo}} 
           {{buttonthree}} -->
