--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,9 +42,9 @@
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}-->
-   <center>{{site.lineone}}<br>{{site.linetwo}}</center> 
+   <center>{{site.lineone}}<br>{{site.linetwo}}</center> -->
     </header>
- <!-- <center>{{site.lineone}}<br>{{site.linetwo}}</center> -->
+  <center>{{site.lineone}}<br>{{site.linetwo}}</center> 
     
     <main id="content" class="main-content" role="main">
       {{ content }}
