--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
       
 <a href="#best-distance-parts-by-vehicle" class="btn">Adventure <strong>Parts</strong></a> 
 <a href="#tracks-by-map-type-and-distance" class="btn">Cup <strong>Tracks</strong></a>
-<a href="#daily-checklist" class="btn">Daily <strong>Checklist</strong></a>
+<a href="#daily-checklist" class="btn">Daily <strong>Checklist</strong></a></header>
          <!-- {{buttonone}} 
           {{buttontwo}} 
           {{buttonthree}} -->
@@ -41,9 +41,9 @@
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
-      {% endif %}-->
-   <center>{{site.lineone}}<br>{{site.linetwo}}</center> -->
-    </header>
+      {% endif %}
+   <center>{{site.lineone}}<br>{{site.linetwo}}</center> 
+    </header>-->
   <center>{{site.lineone}}<br>{{site.linetwo}}</center> 
     
     <main id="content" class="main-content" role="main">
