--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,15 @@
 ---
 ---
 
+$header-heading-color: #606c71 !default;
+$header-bg-color: #FFF !default;
+$header-bg-color-secondary: #FFF !default;
+
+// Text
+$section-headings-color: #159957 !default;
+$body-text-color: #606c71 !default;
+$body-link-color: #1e6bb8 !default;
+$blockquote-text-color: #819198 !default;
+
 
 @import "{{ site.theme }}";
