--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,9 +1,9 @@
 ---
 ---
 
-$header-heading-color: #606c71 !default;
-$header-bg-color: #FFF !default;
-$header-bg-color-secondary: #FFF !default;
+$header-heading-color: #FFF !default;
+$header-bg-color: ##606c71 !default;
+$header-bg-color-secondary: #819198 !default;
 
 // Text
 $section-headings-color: #159957 !default;
