--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,7 @@
 ---
 
 $header-heading-color: #FFF !default;
-$header-bg-color: ##606c71 !default;
+$header-bg-color: #606c71 !default;
 $header-bg-color-secondary: #819198 !default;
 
 // Text
