--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,15 +22,14 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
   <body>
-    <a id="skip-to-content" href="#content">Skip to the content.</a>
-
+    <a id="skip-to-content" href="#content"><!--Skip to the content.--></a>
     <header class="page-header" role="banner">
       <h1 class="project-name">{{site.title}}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       
 <a href="#best-distance-parts-by-vehicle" class="btn">Adventure <strong>Parts</strong></a> 
 <a href="#tracks-by-map-type-and-distance" class="btn">Cup <strong>Tracks</strong></a>
-<a href="#daily-checklist" class="btn">Daily <strong>Checklist</strong></a></header>
+<a href="#daily-checklist" class="btn">Daily <strong>Checklist</strong></a>
          <!-- {{buttonone}} 
           {{buttontwo}} 
           {{buttonthree}} -->
@@ -41,10 +40,10 @@
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
-      {% endif %}
+      {% endif %} -->
    <center>{{site.lineone}}<br>{{site.linetwo}}</center> 
-    </header>-->
-  <center>{{site.lineone}}<br>{{site.linetwo}}</center> 
+    </header>
+<!--  <center>{{site.lineone}}<br>{{site.linetwo}}</center> -->
     
     <main id="content" class="main-content" role="main">
       {{ content }}
