--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,7 @@
 ---
 
 $header-heading-color: #FFF !default;
-$header-bg-color: #606c71 !default;
+$header-bg-color: #f3f6fa !default;
 $header-bg-color-secondary: #159957 !default;
 
 // Text
@@ -11,5 +11,13 @@ $body-text-color: #606c71 !default;
 $body-link-color: #1e6bb8 !default;
 $blockquote-text-color: #819198 !default;
 
+// Code
+$code-bg-color: #f3f6fa !default;
+$code-text-color: #567482 !default;
+
+// Borders
+$border-color: #dce6f0 !default;
+$table-border-color: #e9ebec !default;
+$hr-border-color: #eff0f1 !default;
 
 @import "{{ site.theme }}";
