--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,7 @@
 ---
 
 $header-heading-color: #FFF !default;
-$header-bg-color: #f3f6fa !default;
+$header-bg-color: #e9ebec !default;
 $header-bg-color-secondary: #159957 !default;
 
 // Text
