--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,9 +1,9 @@
 ---
 ---
 
-$header-heading-color: #FFF !default;
-$header-bg-color: #e9ebec !default;
-$header-bg-color-secondary: #159957 !default;
+$header-heading-color: #1e6bb8 !default;
+$header-bg-color: #159957 !default;
+$header-bg-color-secondary: #e9ebec !default;
 
 // Text
 $section-headings-color: #159957 !default;
