--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,8 +2,8 @@
 ---
 
 $header-heading-color: #1e6bb8 !default;
-$header-bg-color: #159957 !default;
-$header-bg-color-secondary: #159957 !default;
+$header-bg-color: gold !default;
+$header-bg-color-secondary: orange !default;
 
 // Text
 $section-headings-color: #159957 !default;
