--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,8 +1,12 @@
 ---
 ---
 
-$header-heading-color: #1e6bb8 !default;
-$header-bg-color: gold !default;
+$// Breakpoints
+$large-breakpoint: 42em !default;
+$medium-breakpoint: 20em !default;
+
+header-heading-color: #1e6bb8 !default;
+$header-bg-color: orangered !default;
 $header-bg-color-secondary: orange !default;
 
 // Text
