--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,9 +1,9 @@
 ---
 ---
 
-$// Breakpoints
-$large-breakpoint: 64em !default;
-$medium-breakpoint: 42em !default;
+// Breakpoints
+$large-breakpoint: 42em !default;
+$medium-breakpoint: 20em !default;
 
 header-heading-color: #1e6bb8 !default;
 $header-bg-color: orangered !default;
