--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@ $medium-breakpoint: 20em !default;
 
 header-heading-color: #1e6bb8 !default;
 $header-bg-color: orangered !default;
-$header-bg-color-secondary: orange !default;
+$header-bg-color-secondary: darkorange !default;
 
 // Text
 $section-headings-color: #159957 !default;
