--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,8 +6,8 @@ $large-breakpoint: 42em !default;
 $medium-breakpoint: 20em !default;
 
 $header-heading-color: #1e6bb8 !default;
-$header-bg-color: darkseagrean !default;
-$header-bg-color-secondary: chocolate !default;
+$header-bg-color: orangered !default;
+$header-bg-color-secondary: aqua !default;
 
 // Text
 $section-headings-color: #159957 !default;
