--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@ $medium-breakpoint: 42em !default;
 
 $header-heading-color: #1e6bb8 !default;
 $header-bg-color: Turquoise !default;
-$header-bg-color-secondary: aqua !default;
+$header-bg-color-secondary: coral !default;
 
 // Text
 $section-headings-color: #159957 !default;
